--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
        <div class = nav-elem-container>
         <a href="index.html"> Home </a>    
         <a href="about.html"> About Us </a>
+        <a href="#contact"> Contact Us </a>
+
+       
        </div>
         
     </nav>
