--- a/about.html
+++ b/about.html
@@ -28,22 +28,21 @@
        
             <p>
                 <p class = "aside-title">Our Organization</p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum, fuga deserunt quis pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum.libero consectetur officiis natus, veritatis a maiores, 
             </p>
              <p>
                  <p class = "aside-title">Our Mission</p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum, fuga deserunt quis pariatur.
-            </p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum. libero consectetur officiis natus, veritatis a maiores, 
              <p>
                  <p class = "aside-title">More About us</p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum, fuga deserunt quis pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum. libero consectetur officiis natus, veritatis a maiores, 
             </p>
              <p class = "aside-title"p>Blog</p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum, fuga deserunt quis pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum. libero consectetur officiis natus, veritatis a maiores, 
             </p>
              <p>
                  <p class = "aside-title">Contact us</p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum, fuga deserunt quis pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugit repudiandae! Minima alias optio esse nostrum. Praesentium esse sequi consequatur dicta, ex molestiae dignissimos aperiam harum. libero consectetur officiis natus, veritatis a maiores, 
             </p>
     </div>
 
