--- a/about.html
+++ b/about.html
@@ -46,11 +46,17 @@
             </p>
     </div>
 
-    <div class="text-right">
-        <div class="parag-content">
-        <p class="parag-title"> Our Organization </p>
+    <div class="text-right"> 
+      <div class="parag-content parag-content-top">
+      <div class="child child-image">
+      <img class = "prof-image"src="photos/prof-thierno-in-action.png" alt="no image available">
+      </div>
+      <div class="child child-text">
+      <p class="parag-title"> Our Organization </p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta possimus nemo accusamus hic, natus voluptatum magnam aperiam soluta vitae, omnis iusto repellendus tempore, vero culpa voluptates inventore rem nisi accusantium.Voluptatum ullam adipisci perspiciatis ut nisi, libero consectetur officiis natus, veritatis a maiores, quod possimus obcaecati aliquam omnis. Quasi porro distinctio rem facere officiis quaerat iure, eius consequatur maxime inventore.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta possimus nemo accusamus hic, natus voluptatum magnam aperiam soluta vitae, omnis iusto repellendus tempore, vero culpa voluptates inventore rem nisi accusantium.Voluptatum ullam adipisci perspiciatis ut nisi, libero consectetur officiis natus, veritatis a maiores, quod possimus obcaecati aliquam omnis. Quasi porro distinctio rem facere officiis quaerat iure, eius consequatur maxime inventore.
-    </div>
+      </div>
+       
+        </div>
 
      <div class="parag-content">
          <p class ="parag-title">Our Mission</p>
