--- a/index.html
+++ b/index.html
@@ -20,4 +20,16 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
+
+  <!--Navigation code here-->
+  <div class="top-nav">
+    <nav>
+      <a href="#">Features</a>
+      <a href="#">Premium</a>
+      <a href="#">Pricing</a>
+      <a href="about.html">About</a>
+      <a href="#">Sign In</a>
+      <a href="#"><button>Get Started</button></a>
+    </nav>
+  </div>
 </html>
