Completed Header HTML scaffold.

--- a/index.html
+++ b/index.html
@@ -16,20 +16,43 @@
       rel="stylesheet"
     />
 
+    <link href="css/index.css" rel="stylesheet" />
+
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
 
-  <!--Navigation code here-->
-  <div class="top-nav">
-    <nav>
-      <a href="#">Features</a>
-      <a href="#">Premium</a>
-      <a href="#">Pricing</a>
-      <a href="about.html">About</a>
-      <a href="#">Sign In</a>
-      <a href="#"><button>Get Started</button></a>
-    </nav>
-  </div>
+
+<body>
+<div class = 'main-container'>
+    <header class = 'main-header'>
+        <!--Navigation code here-->
+        <div class="top-nav">
+            <nav>
+                <img class = 'logo' src='/images/Logo.png'>
+                <a href="#">Features</a>
+                <a href="#">Premium</a>
+                <a href="#">Pricing</a>
+                <a href="about.html">About</a>
+                <a href="#">Sign In</a>
+                <a href="#"><button>Get Started</button></a>
+            </nav>
+        </div> 
+        <!--End Nav code-->
+
+        <!--Header CTA code here-->
+        <div class='header-CTA'>
+            <h1>Organization Made Easy.</h1>
+            <p>The Better Professor App was created with everything you need to build and maintain your Collegiate network.</p>
+            <button>Get Started</button>
+        </div>
+        <!--End Header CTA-->
+        
+    <!--End Header-->
+    </header>
+</div>
+
 </html>
+</body>
+  
