--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       rel="stylesheet"
     />
 
+    <!--Connect to CSS Stylesheet-->
     <link href="css/index.css" rel="stylesheet" />
+
+    <!--Font Awesome import-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/13a6753ac9.js" crossorigin="anonymous"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -56,8 +61,22 @@
         <h3>Promoting your business and services with Better Professor:</h3><p>A responsive, multi-page web app with everything you need to be a Better Professor.</p>
 
         <div class = 'feat-container'>
-            <i class="fas fa-city"></i>
+                <i class="fas fa-award fa-3x"></i>
+                <h4>Feature Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
         </div>
+
+        <div class = 'feat-container'>
+                <i class="fas fa-chalkboard-teacher fa-3x"></i>
+                <h4>Feature Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
+        </div>    
+        
+        <div class = 'feat-container'>
+                <i class="fas fa-school fa-3x"></i>
+                <h4>Feature Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
+        </div>        
     </section>
 </div>
 
