Completed HTML structoring.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,17 @@
           </div>
           <!--End Carousel code-->
 
-          
+          <!--Begin Footer-->
+          <footer>
+            <div>
+                <p>Join our Better Professor Community</p></br>
+            </div>
+
+            <div class="copyright">
+                <p>Copyright © bw-better-professor</p><br>
+            </div>
+          </footer>
+
 </div>
 
 </html>
