--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="item">
-                <img src="https://uinames.com/api/photos/male/9.jpg" alt="Picture of a woman">
+                <img src="https://uinames.com/api/photos/male/9.jpg" alt="Picture of a man">
                 <div class="carousel-caption">
                   Fugiat culpa est non irure adipisicing.
                 </div>
