Configured the desktop nav bar.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-  <link href="index.css" rel="stylesheet">
+  <link href="/less/index.css" rel="stylesheet">
 
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -42,7 +42,7 @@
   </head>
 
 
-<body>
+<body id='main_container'>
 <div class = 'main-container'>
     <header class = 'main-header'>
         <!--Navigation code here-->
