--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
     <header class = 'main-header'>
         <!--Navigation code here-->
         <section class="top-nav">
-            <nav>
+            <nav class ='home-nav'>
                 <img class = 'logo' src='/images/Logo.png'>
-                <a href="#">Features</a>
-                <a href="#">Premium</a>
-                <a href="#">Pricing</a>
-                <a href="about.html">About</a>
-                <a href="#">Sign In</a>
-                <a href="#"><button>Get Started</button></a>
+                <a class = 'nav_item' href="#">Features</a>
+                <a class = 'nav_item' href="#">Premium</a>
+                <a class = 'nav_item' href="#">Pricing</a>
+                <a class = 'nav_item' href="about.html">About</a>
+                <a class = 'nav_item' href="#">Sign In</a>
+                <a class = 'nav_item' href="#"><button>Get Started</button></a>
             </nav>
         </section> 
         <!--End Nav code-->
@@ -63,7 +63,7 @@
         <section class='header-CTA'>
             <h1>Organization Made Easy.</h1>
             <p>The Better Professor App was created with everything you need to build and maintain your Collegiate network.</p>
-            <button>Get Started</button>
+            <button class='header-button'>Get Started</button>
         </section>
         <!--End Header CTA-->
 
@@ -75,7 +75,7 @@
 
         <div class = 'feat-container'>
                 <i class="fas fa-award fa-3x"></i>
-                <h4>Feature Title</h4>
+                <h4>Feature Title</h4> <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
         </div>
 
