--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
     </header>
 
     <section class = 'showcase-feats'>
-        <h3>Promoting your business and services with Better Professor:</h3><p>A responsive, multi-page web app with everything you need to be a Better Professor.</p>
+        <h3>Promoting your business and services with Better Professor:</h3>
 
-        <div class = 'feat-container'>
+        <div class = 'feat-container1'>
                 <i class="fas fa-award fa-3x"></i>
                 <h4>Feature Title</h4> <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
         </div>
 
-        <div class = 'feat-container'>
+        <div class = 'feat-container2'>
                 <i class="fas fa-chalkboard-teacher fa-3x"></i>
                 <h4>Feature Title</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
         </div>    
         
-        <div class = 'feat-container'>
+        <div class = 'feat-container3'>
                 <i class="fas fa-school fa-3x"></i>
                 <h4>Feature Title</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
