--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <!--End Header-->
     </header>
 
+    <!--Begin Feats section-->
     <section class = 'showcase-feats'>
         <h3>Promoting your business and services with Better Professor:</h3>
 
@@ -107,7 +108,8 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
         </div>        
     </section>
-
+    <!--End Feats section-->
+    
      <!--Begin Carousel-->
      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
