Attached MVP project to React App.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class = 'nav_item' href="#">Pricing</a>
                 <a class = 'nav_item' href="about.html">About</a>
                 <a class = 'nav_item' href="#">Sign In</a>
-                <a class = 'nav_item' href="#"><button>Get Started</button></a>
+                <a class = 'nav_item' href="https://better-professor-site.netlify.com/"><button>Get Started</button></a>
               
               <!--Tablet Nav-->
               <div class="dropdown">
@@ -76,7 +76,7 @@
         <!--Header CTA code here-->
         <section class='header-CTA'>
             <h1>Organization Made Easy.</h1>
-            <button class='header-button'>Get Started</button>
+            <button class='header-button' href="https://better-professor-site.netlify.com/">Get Started</button>
             <!-- <button type="button" class="btn btn-info">Join Now</button> -->
         </section>
         <!--End Header CTA-->
@@ -109,7 +109,7 @@
         </div>        
     </section>
     <!--End Feats section-->
-    
+
      <!--Begin Carousel-->
      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
