--- a/index.html
+++ b/index.html
@@ -105,20 +105,20 @@
 
         <div class = 'feat-container1'>
                 <i class="fas fa-award fa-3x"></i>
-                <h4>Feature Title</h4> <br>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
+                <h4>User Accounts</h4> <br>
+                <p>Unique user accounts can be created with custom design capabilities unique to your university!</p>
         </div>
 
         <div class = 'feat-container1'>
                 <i class="fas fa-chalkboard-teacher fa-3x"></i>
-                <h4>Feature Title</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
+                <h4>Direct Messaging</h4>
+                <p>Students and Staff accounts can communicate openly to one another without any restrictions.</p>
         </div>    
         
         <div class = 'feat-container1'>
                 <i class="fas fa-school fa-3x"></i>
-                <h4>Feature Title</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, minima.</p>
+                <h4>Unique Profiler</h4>
+                <p>Create a custom user space to show off your latest projects, and communicate with your following!</p>
         </div>        
     </section>
     <!--End Feats section-->
@@ -137,19 +137,20 @@
               <div class="item active">
                 <img src="https://uinames.com/api/photos/female/15.jpg" alt="Picture of a woman">
                 <div class="carousel-caption">
-                  Enim labore ut ea ipsum elit do veniam consectetur cillum ex.
+                  I have always looked for one area where I can communicate with my professors, I'm so glad
+                  that this program now exists!
                 </div>
               </div>
               <div class="item">
                 <img src="https://uinames.com/api/photos/female/12.jpg" alt="Picture of a woman">
                 <div class="carousel-caption">
-                  Amet ex eu excepteur dolore veniam sunt exercitation proident.
+                  The ability to have active mentors and to sift through them with ease is a really helpful tool!
                 </div>
               </div>
               <div class="item">
                 <img src="https://uinames.com/api/photos/male/9.jpg" alt="Picture of a man">
                 <div class="carousel-caption">
-                  Fugiat culpa est non irure adipisicing.
+                  It reminds me of how the original facebook project started, I can only imagine how this will take off!
                 </div>
               </div>
             </div>
